# filechat

./: .env.example  .gitignore  FileChat_x_feature.html  README.md  center.jsx  components.jsx  data.jsx  eslint.config.js  filechat.html  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  rationale.md  right-panel.jsx  styles.css  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS
backend/app/: agent_runs.py  agent_runtime.py  artifacts.py  audit.py  auth.py  bot_integrations.py  config.py  database.py  ingest.py  main.py  meta_issues.py  models.py  openrouter.py  orchestration.py  prompt_context.py  providers.py  retrieval.py  security.py  settings_store.py  survey.py  usage.py  utils.py  wiki.py
backend/tests/: test_api.py  test_ingest.py
docs/: artifact-rendering-research.md  enterprise-readiness.md
docs/plans/: filechat-question-centric-agent-harness.md
src/: App.test.tsx  App.tsx  api.ts  artifacts.tsx  styles.css  types.ts
tests/e2e/: filechat.spec.ts
